--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;700&display=swap');
 @import "tailwindcss";
 
+:root {
+  --bg-rotate: 0deg;
+}
+
 @layer utilities {
   .text-fluid-xl {
     font-size: clamp(6rem, 17vw, 25rem);
@@ -33,4 +37,11 @@
 
 ::-webkit-scrollbar {
   display: none;
+}
+
+.card-background-1 {
+  background: conic-gradient(from var(--bg-rotate), transparent 95%, var(--color-red-400));
+  background-position: center;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
 }
